// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Role e2e > snapshots > should match snapshot: both expertise and domain 1`] = `
"<role>
You are an expert analyst
</role>"
`;

exports[`Role e2e > snapshots > should match snapshot: domain with xml delimiter 1`] = `
"<role>
Analyst
</role>"
`;

exports[`Role e2e > snapshots > should match snapshot: expertise with markdown delimiter 1`] = `
"## role

Software Engineer"
`;

exports[`Role e2e > snapshots > should match snapshot: expertise with none delimiter 1`] = `"Software Engineer"`;

exports[`Role e2e > snapshots > should match snapshot: expertise with xml delimiter 1`] = `
"<role>
Software Engineer
</role>"
`;

exports[`Role e2e > snapshots > should match snapshot: preset engineer 1`] = `
"<role>
You are a senior Software Engineer with expertise in software development, programming, system design. You are analytical, detail-oriented, problem-solver.
</role>"
`;

exports[`Role e2e > snapshots > should match snapshot: preset with experience and traits 1`] = `
"<role>
You are a senior Software Engineer with expertise in software development, programming, system design. You are detail-oriented, pragmatic.
</role>"
`;
